# commanderbot-py

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/: CODEOWNERS
commanderbot/: __main__.py
commanderbot/core/: cli.py  command_tree.py  commander_bot.py  commander_bot_base.py  configured_extension.py  error_handling.py  utils.py
commanderbot/ext/allay/: __init__.py  allay_cog.py
commanderbot/ext/automod/: __init__.py  automod_action.py  automod_bucket.py  automod_bucket_ref.py  automod_cog.py  automod_condition.py  automod_data.py  automod_entity.py  automod_event.py  automod_event_state.py  automod_event_state.pyi  automod_guild_state.py  automod_json_store.py  automod_log_options.py  automod_options.py  automod_rule.py  automod_state.py  automod_store.py  automod_trigger.py  node_kind.py  utils.py
commanderbot/ext/faq/: __init__.py  faq_cog.py  faq_data.py  faq_guild_state.py  faq_json_store.py  faq_options.py  faq_state.py  faq_store.py
commanderbot/ext/help_chat/: __init__.py  help_chat_cog.py  help_chat_guild_state.py  help_chat_options.py  help_chat_report.py  help_chat_state.py  help_chat_store.py
commanderbot/ext/help_forum/: __init__.py  help_forum_cog.py  help_forum_data.py  help_forum_exceptions.py  help_forum_guild_state.py  help_forum_json_store.py  help_forum_options.py  help_forum_state.py  help_forum_store.py
commanderbot/ext/invite/: __init__.py  invite_cog.py  invite_data.py  invite_guild_state.py  invite_json_store.py  invite_options.py  invite_state.py  invite_store.py
commanderbot/ext/jira/: __init__.py  jira_client.py  jira_cog.py  jira_issue.py
commanderbot/ext/kick/: __init__.py  kick_cog.py
commanderbot/ext/manifest/: __init__.py  manifest.py  manifest_cog.py  manifest_data.py  manifest_exceptions.py
commanderbot/ext/mccq/: __init__.py  mccq_cog.py
commanderbot/ext/pack/: __init__.py  pack_cog.py  pack_generate.py
commanderbot/lib/: __init__.py  allowed_mentions.py  cog_guild_state_manager.py  cog_state.py  cog_store.py  color.py  constants.py  data.py  dialogs.py  errors.py  event_data.py  extended_json_encoder.py  from_data_mixin.py  guild_partitioned_cog_state.py  integer_range.py  intents.py  json.py  json_file_database_adapter.py  json_serializable.py  lenient_role_converter.py  log_options.py  logging.py  pattern_wrapper.py  responsive_exception.py  role_set.py  shallow_formatter.py  sqlite_database_adapter.py  types.py  value_formatter.py
commanderbot_ext/_lib/: cog_guild_state.py  cog_guild_state_factory.py  cog_guild_state_manager.py  cog_state.py  cog_store.py  database_adapter.py  database_options.py  guild_partitioned_cog_state.py  handlers.py  json_file_database.py  types.py  utils.py
commanderbot_ext/core/: commander_bot.py
commanderbot_ext/faq/: __init__.py  faq_cache.py  faq_cog.py  faq_const.py  faq_guild_state.py  faq_migrations.py  faq_options.py  faq_state.py  faq_store.py
commanderbot_ext/help_chat/: __init__.py  help_chat_cache.py  help_chat_cog.py  help_chat_guild_state.py  help_chat_nom_context.py  help_chat_options.py  help_chat_report.py  help_chat_state.py  help_chat_store.py  utils.py
commanderbot_ext/invite/: __init__.py  invite_cache.py  invite_cog.py  invite_guild_state.py  invite_options.py  invite_state.py  invite_store.py
commanderbot_ext/jira/: __init__.py  jira_cog.py
commanderbot_ext/lib/: __init__.py  allowed_mentions.py  checks.py  cog_guild_state.py  cog_guild_state_manager.py  data.py  database_options.py  extended_json_encoder.py  guild_partitioned_cog_state.py  intents.py  json.py  json_file_database_adapter.py  json_serializable.py  lenient_role_converter.py  pattern_wrapper.py  responsive_exception.py  role_set.py  shallow_formatter.py  sql_database_adapter.py  sqlite_database_adapter.py  types.py  utils.py
commanderbot_ext/pack/: __init__.py  pack_cog.py  pack_generate.py
commanderbot_ext/ping/: __init__.py  ping_cog.py
commanderbot_ext/poster_board/: __init__.py  poster_board_cog.py
commanderbot_ext/quote/: __init__.py  quote_cog.py
commanderbot_ext/roles/: __init__.py  roles_cog.py  roles_guild_state.py  roles_guild_state_factory.py  roles_json_store.py  roles_options.py  roles_state.py  roles_store.py
commanderbot_ext/status/: __init__.py  status_cog.py  status_details.py
commanderbot_ext/vote/: __init__.py  vote_cog.py
commanderbot_ext/whatcanisay/: __init__.py  whatcanisay_cog.py
(+344 files in other folders)
