[tool.poetry]
name = "commanderbot"
version = "0.19.0"
description = "A collection of utilities and extensions for discord.py bots."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/CommanderBot-Dev/commanderbot-py"
homepage = "https://github.com/CommanderBot-Dev/commanderbot-py"
keywords = ['discord', 'bot']

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.0"

# These are used for logging.
colorama = "^0.4.3"
colorlog = "^4.2.1"

# The rest are for various extensions.
aiosqlite = "^0.17.0"
nbtlib = "^1.12.1"
tokenstream = "^1.2.3"
lectern = ">=0.18.0"
mecha = ">=0.15.0"
beet = ">=0.45.3"
allay = "^1.3.0"
aiohttp = "^3.7.4"
PyYAML = "^5.4.1"
emoji = "^1.4.2"
jsonpath-ng = "^1.5.3"
mccq = "^1.0.2"
python-dotenv = "^0.20.0"
# NOTE See: https://github.com/python-poetry/poetry/issues/4402
# This was fixed in stable, but doesn't seem to be fixed in the beta branch.
SQLAlchemy = ">=1.4,<1.4.23"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
