[tool.poetry]
name = "commanderbot"
version = "0.20.0a8"
description = "A collection of utilities and extensions for discord.py bots."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/CommanderBot-Dev/commanderbot-py"
homepage = "https://github.com/CommanderBot-Dev/commanderbot-py"
keywords = ['discord', 'bot']

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies.
"discord.py" = "^2.1.0"
python-dotenv = "^0.21.0"

# These are used for logging.
colorama = "^0.4.3"
colorlog = "^4.2.1"

# These are used for managing SQLite databases.
aiosqlite = "^0.17.0"
# NOTE [SQLAlchemy] See: https://github.com/python-poetry/poetry/issues/4402
# This was fixed in stable, but doesn't seem to be fixed in the beta branch.
SQLAlchemy = ">=1.4,<1.4.23"

# These are used for handling text-based data (json, yaml, etc).
jsonpath-ng = "^1.5.3"
pydantic = "^1.10.2"
PyYAML = "^5.4.1"

# Libraries related to Beet/Lectern.
allay = "^1.3.0"
beet = ">=0.45.3"
lectern = ">=0.18.0"
mecha = ">=0.15.0"
tokenstream = "^1.2.3"

# The rest are for various extensions.
aiohttp = "^3.7.4"
emoji = "^2.0.0"
mccq = "^1.0.2"
nbtlib = "^1.12.1"
psutil = "^5.9.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
